bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type string
var lettre : string = ""
             ^