bdr.BDR.scala.code
var lettre : string = ""
if (estSurMessage()) {
  
}